--- a/client/useraccounts/bootstrap/lib/at_form.html
+++ b/client/useraccounts/bootstrap/lib/at_form.html
@@ -1,39 +1,41 @@
 <template name="atForm">
   {{#unless hide}}
     <div class="at-form">
-      {{#if showTitle}}
-        {{> atTitle}}
-      {{/if}}
-      {{#if showOauthServices}}
-        {{> atOauth}}
-      {{/if}}
-      {{#if showServicesSeparator}}
-        {{> atSep}}
-      {{/if}}
-      {{#if showError}}
-        {{> atError}}
-      {{/if}}
-      {{#if showResult}}
-        {{> atResult}}
-      {{/if}}
-      {{#if showMessage}}
-        {{> atMessage}}
-      {{/if}}
-      {{#if showPwdForm}}
-        {{> atPwdForm}}
-      {{/if}}
-      {{#if showTermsLink}}
-        {{> atTermsLink}}
-      {{/if}}
-      {{#if showSignInLink}}
-        {{> atSigninLink}}
-      {{/if}}
-      {{#if showSignUpLink}}
-        {{> atSignupLink}}
-      {{/if}}
-      {{#if showResendVerificationEmailLink}}
-        {{> atResendVerificationEmailLink}}
-      {{/if}}
+      <div class="1234">
+        {{#if showTitle}}
+          {{> atTitle}}
+        {{/if}}
+        {{#if showOauthServices}}
+          {{> atOauth}}
+        {{/if}}
+        {{#if showServicesSeparator}}
+          {{> atSep}}
+        {{/if}}
+        {{#if showError}}
+          {{> atError}}
+        {{/if}}
+        {{#if showResult}}
+          {{> atResult}}
+        {{/if}}
+        {{#if showMessage}}
+          {{> atMessage}}
+        {{/if}}
+        {{#if showPwdForm}}
+          {{> atPwdForm}}
+        {{/if}}
+        {{#if showTermsLink}}
+          {{> atTermsLink}}
+        {{/if}}
+        {{#if showSignInLink}}
+          {{> atSigninLink}}
+        {{/if}}
+        {{#if showSignUpLink}}
+          {{> atSignupLink}}
+        {{/if}}
+        {{#if showResendVerificationEmailLink}}
+          {{> atResendVerificationEmailLink}}
+        {{/if}}
+      </div>
     </div>
   {{/unless}}
 </template>
