--- a/client/useraccounts/bootstrap/lib/full_page_at_form.html
+++ b/client/useraccounts/bootstrap/lib/full_page_at_form.html
@@ -1,6 +1,9 @@
 <template name="fullPageAtForm">
-  <div class="container">
+  <div class="container-form">
     <div class="row">
+      <center>
+        <img src="/images/homepage-logo.png" width="100%" height="auto" class="app-logo" alt="" />
+      </center>
       <div class="col-md-6 col-md-offset-3">
         {{> atForm}}
       </div>
