--- a/client/useraccounts/bootstrap/lib/at_form.html
+++ b/client/useraccounts/bootstrap/lib/at_form.html
@@ -1,7 +1,7 @@
 <template name="atForm">
   {{#unless hide}}
     <div class="at-form">
-      <div class="1234">
+      <div>
         {{#if showTitle}}
           {{> atTitle}}
         {{/if}}
