--- a/client/useraccounts/bootstrap/lib/full_page_at_form.html
+++ b/client/useraccounts/bootstrap/lib/full_page_at_form.html
@@ -4,7 +4,7 @@
       <center>
         <img src="/images/homepage-logo.png" width="100%" height="auto" class="app-logo" alt="" />
       </center>
-      <div class="col-md-6 col-md-offset-3">
+      <div class="container-form-padding">
         {{> atForm}}
       </div>
     </div>
